test/compile_errors/stage1/obj/volatile_on_global_assembly.zig
comptime {
    asm volatile ("");
}

// volatile on global assembly
//
// tmp.zig:2:9: error: volatile is meaningless on global assembly
